findbugs DM_NUMBER_CTOR.
svn path=/dasCore/community/autoplot2011/trunk/; revision=5612